--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "description": "CSV Component for elastic.io platform",
   "main": "index.js",
   "scripts": {
-    "pretest": "eslint lib/ spec --fix",
-    "test": "nyc mocha spec",
+     "start": "node ./node_modules/ferryman/runGlobal.js",
+    "pretest": "eslint lib test --ext .js --ext .json --fix",
+    "test": "NODE_ENV=test mocha test/* --timeout 10000",
+    "test-watch": "nodemon --exec \"npm test \""
     "integration-test": "mocha spec-integration"
   },
   "engines": {
@@ -26,6 +28,7 @@
   },
   "homepage": "https://github.com/elasticio/csv-component#readme",
   "dependencies": {
+    "@openintegrationhub/ferryman": "^1.1.5",
     "@elastic.io/component-commons-library": "1.1.5",
     "elasticio-node": "0.0.9",
     "elasticio-sailor-nodejs": "2.6.26",
