--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
      "start": "node ./node_modules/ferryman/runGlobal.js",
     "pretest": "eslint lib test --ext .js --ext .json --fix",
     "test": "NODE_ENV=test mocha test/* --timeout 10000",
-    "test-watch": "nodemon --exec \"npm test \""
+    "test-watch": "nodemon --exec \"npm test \"",
     "integration-test": "mocha spec-integration"
   },
   "engines": {
